rnsc/tests/snapshots/error-lexer-integers-hex_prefix_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 0x123
----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/hex_prefix.rns:1:7 ]
   │
 1 │ .code 0x123
   │       ──┬──  
   │         ╰──── '0x123' contains invalid characters
   │ 
   │ Note: Hexadecimal numbers are not supported yet, but are planned for the future.
───╯
----- HASH -----
not generated
